; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_event-top.c_handle_sigint.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_event-top.c_handle_sigint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@immediate_quit = common dso_local global i64 0, align 8
@sigint_token = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_sigint(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @signal(i32 %3, void (i32)* @handle_sigint)
  %5 = load i64, i64* @immediate_quit, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @async_request_quit(i32 0)
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @sigint_token, align 4
  %11 = call i32 @mark_async_signal_handler_wrapper(i32 %10)
  br label %12

12:                                               ; preds = %9, %7
  ret void
}

declare dso_local i32 @signal(i32, void (i32)*) #1

declare dso_local i32 @async_request_quit(i32) #1

declare dso_local i32 @mark_async_signal_handler_wrapper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
